# kindlestrip

./: .bumpversion.cfg  .pre-commit-config.yaml  AUTHORS.md  MANIFEST.in  README.md  README.rst  justfile  kindlestrip.py  kindlestrip_py3.py  requirements.in  requirements.txt  setup.cfg  setup.py  tasks.py
