[metadata]
name = kindlestrip
version = 1.37.0
description = Strips the penultimate record from Mobipocket ebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jefftriplett/kindlestrip
author = Paul Durrant
maintainer = Jeff Triplett
maintainer_email = jeff.triplett@gmail.com
license = Unlicense
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
packages = find:
py_modules = kindlestrip
python_requires = >=3.7

[options.entry_points]
console_scripts =
    kindlestrip = kindlestrip:main

[bdist_wheel]
universal = 1
